# YTD

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/YtdCore/: EncoderDetector.cs  ExternalEncoder.cs  Program.cs  TextureProcessor.cs  YtdCore.csproj  YtdService.cs
src-tauri/src/: main.rs  sidecar.rs
src-tauri/src/commands/: encoder.rs  mod.rs  preview.rs  process.rs  ytd.rs
src/components/ConfigPanel/: ActionButtons.tsx  EncoderSelector.tsx  ExportConfig.tsx  FormatSelector.tsx  MipmapConfig.tsx  ResizeConfig.tsx  ScopeSelector.tsx
src/components/ExclusionsTab/: ExclusionsList.tsx
src/components/HierarchyPanel/: HierarchyTree.tsx  TextureNode.tsx  YtdNode.tsx
src/components/Layout/: LogPanel.tsx  StatusBar.tsx  TopBar.tsx
src/components/PreviewPanel/: CompareView.tsx  TextureInfo.tsx  TexturePreview.tsx
src/components/Settings/: AboutModal.tsx  CreditsTab.tsx  SettingsModal.tsx
src/lib/: i18n.ts
src/store/: configStore.ts  languageStore.ts  processStore.ts  ytdStore.ts
src/types/: ytd.types.ts
